--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros2_lifecycle</name>
+  <name>ros2_lifecycle_demo</name>
   <version>0.0.0</version>
-  <description>Assignment: ROS2 Lifecycle Nodes</description>
-  <maintainer email="student@university.edu">Student Name</maintainer>
+  <description>ROS 2 Lifecycle Node Demo</description>
+  <maintainer email="student@example.com">Student</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- TODO: Add dependencies for rclcpp, rclcpp_lifecycle, and std_msgs -->
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
