--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(ros2_lifecycle_demo)
+project(ros2_lifecycle)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,7 +10,7 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(std_msgs REQUIRED)
 
-# FIX: Executable name is now "lifecycle_node"
+# Executable name must be lifecycle_node
 add_executable(lifecycle_node src/lifecycle_node.cpp)
 
 ament_target_dependencies(lifecycle_node
