--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros2_lifecycle_demo</name>
+  <name>ros2_lifecycle</name>
   <version>0.0.0</version>
-  <description>ROS 2 Lifecycle Node Demo</description>
+  <description>ROS 2 Lifecycle Node Assignment</description>
   <maintainer email="student@example.com">Student</maintainer>
   <license>Apache-2.0</license>
 
