--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,26 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(std_msgs REQUIRED)
 
-# --- FIX IS HERE ---
-# We tell CMake to compile 'src/lifecycle_sensor.cpp' 
-# but name the final program 'lifecycle_node' so the test passes.
-add_executable(lifecycle_node src/lifecycle_sensor.cpp)
-# -------------------
+# Add the executable target named 'lifecycle_sensor'
+add_executable(lifecycle_sensor src/lifecycle_sensor.cpp)
 
-ament_target_dependencies(lifecycle_node
-  rclcpp
-  rclcpp_lifecycle
-  std_msgs
-)
+# Add dependencies for rclcpp, rclcpp_lifecycle, std_msgs
+ament_target_dependencies(lifecycle_sensor rclcpp rclcpp_lifecycle std_msgs)
 
+# Install the target
 install(TARGETS
-  lifecycle_node
-  DESTINATION lib/${PROJECT_NAME}
-)
+  lifecycle_sensor
+  DESTINATION lib/${PROJECT_NAME})
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
 ament_package()
