--- a/package.xml
+++ b/package.xml
@@ -3,12 +3,13 @@
 <package format="3">
   <name>ros2_lifecycle</name>
   <version>0.0.0</version>
-  <description>ROS 2 Lifecycle Node Assignment</description>
-  <maintainer email="student@example.com">Student</maintainer>
+  <description>Assignment: ROS2 Lifecycle Nodes</description>
+  <maintainer email="student@university.edu">Student Name</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <!-- TODO: Add dependencies for rclcpp, rclcpp_lifecycle, and std_msgs -->
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>std_msgs</depend>
